# m-audio-usb-midi-fw

./: 42-midisport-firmware.rules.in  Changelog  Makefile.am  Makefile.in  MidiSport1x1.ihx  MidiSport2x2.ihx  MidiSport4x4.ihx  MidiSport8x8-2.10.ihx  MidiSport8x8-2.21.ihx  MidiSportKS.ihx  README.md  configure  configure.ac  midisport-firmware.spec  midisport-firmware.spec.in
